<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ProfileActivity">

    <!-- Heading -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/blue_500"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/back_button_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/white"
            tools:ignore="HardcodedText" />

        <!-- User Photo -->
        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="User_photo"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@android:color/white"
            tools:ignore="HardcodedText" />

        <!-- 用户名 -->
        <TextView
            android:id="@+id/text_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="John Doe"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_device_id"
            app:layout_constraintStart_toEndOf="@+id/profile_icon"
            app:layout_constraintTop_toTopOf="@+id/profile_icon"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="HardcodedText" />

        <!-- Devicce ID -->
        <TextView
            android:id="@+id/text_device_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Device ID: ABC123XYZ"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_icon"
            app:layout_constraintStart_toEndOf="@+id/profile_icon"
            app:layout_constraintTop_toBottomOf="@+id/text_user_name"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Scroll View -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Personal Information -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Personal Information"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp"
                        tools:ignore="HardcodedText" />

                    <!-- Name -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:layout_marginBottom="8dp"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            tools:text="John Doe"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Email -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:layout_marginBottom="8dp"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            tools:text="john.doe@email.com"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Phone -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Phone Number"
                        android:layout_marginBottom="16dp"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            tools:text="+1 234 567 8900"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Update Profile -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_update_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="12dp"
                        android:text="Update Profile"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- preference -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Preference"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp"
                        tools:ignore="HardcodedText" />

                    <!-- notification -->
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        android:text="Receive Notification"
                        tools:ignore="HardcodedText" />

                    <!-- enable location -->
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        android:text="Enable Location Service"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- delete account -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/design_default_color_error"
                app:strokeWidth="1dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_delete_account"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="Delete Account"
                    android:textColor="@color/red_500"
                    app:rippleColor="@color/red_500"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/gray_700"
        app:itemTextColor="@color/gray_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>
